2011-02-09  Vadim Kurland  <vadim@netcitadel.com>

	* platforms.cpp (setDefaultFailoverGroupAttributes): fixes #2064
	"CARP interfaces are not properly installed on FreeBSD cluster".
	I need to populate failover group objects with some reasonable
	defaults when they are created.

	* configlets/freebsd/installer_commands_root: fixes #2065
	"activation commands on FreeBSD and OpenBSD lose script exit
	status". Sequence of commands ran by the built-in installer on
	*BSD firewalls were losing exit status of the script which meant
	installer always declared installation a "success" even when
	there were errors.

2011-02-08  vadim  <vadim@netcitadel.com>

	* SSHUnx.cpp (SSHUnx): fixes #2061 "Installer shows success for
	failed installed on FreeBSD due to corrupt script file". Added
	bunch of common shell error messages to make sure installer
	recognizes them and mark install as a failure even if ssh fails
	to pass termination code.

	* instDialog.cpp (showPage): fixes #2037 "If there is an error
	when compiling firewall then installer should be
	aborted". Compile/install wizard should disable "Next" button
	after compile phase is done if all firewalls failed to compile
	with no errors.

	* configlets/bsd/update_bridge: fixes #2042 "add configlet and
	shell functions to manage bridge interfaces via shell script on
	OpenBSD and FreeBSD". Bridge interfaces are managed incrementally,
	that is, the script creates and destroys them as needed, then adds
	or removes bridge ports, to bring bridge configuration in sync
	with what is defined in fwbuilder GUI.

	* CompilerDriver_pf_run.cpp (run): fixes #2054 "Add support for
	load anchor PF command". Instead of loading anchors using "pfctl
	-a anchor -f file" command in the .fw initialization script, now
	generated PF configuration uses "load anchor" commands in the
	pf.conf file. This way, we can load anchors correctly when PF
	configuration is activated from the generated rc.conf.local file